<resources>
    <string name="app_name">FPCommerceApp</string>
    <string name="login_pg_txt">LOGIN</string>
    <string name="email_id">Email Id</string>
    <string name="password_txtv_txt">Password</string>
    <string name="login_btn_txt">LOGIN</string>
    <string name="forgot_txt">FORGOT PASSWORD</string>
    <string name="create_acnt_txt">DON\'T HAVE AN ACCOUNT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_tb_text">REGISTER</string>
    <string name="fullname_txt">Full Name</string>
    <string name="mobile_txtv_txt">Mobile No.</string>
    <string name="login_acnt_txt">I HAVE AN ACCOUNT</string>
    <string name="register_btn_txt">REGISTER</string>
    <string name="cart_txt">ADD TO CART</string>
    <string name="add_cart">ADD TO CART</string>
</resources>