<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.RegisterFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cl_toolbarBg"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/register_tb_text"
        app:titleMarginStart="@dimen/login_title_margin"
        app:titleTextColor="@color/white"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtv_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_marginStart="@dimen/edtx_margin"
        android:layout_marginEnd="@dimen/edtx_margin"
        android:textColor="@color/grey_txt"
        android:text="@string/fullname_txt"
        android:paddingBottom="@dimen/edtx_txtv_margin"
        android:textSize="@dimen/extra_small_txt"
        android:layout_marginTop="@dimen/button_margin"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtx_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtv_fullname"
        android:background="@drawable/edtx_bg"
        android:padding="@dimen/edtx_padding"
        android:layout_marginStart="@dimen/edtx_margin"
        android:layout_marginEnd="@dimen/edtx_margin"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtv_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edtx_fullname"
        android:layout_marginStart="@dimen/edtx_margin"
        android:layout_marginEnd="@dimen/edtx_margin"
        android:textColor="@color/grey_txt"
        android:paddingTop="@dimen/txtv_pass_padding"
        android:paddingBottom="@dimen/edtx_txtv_margin"
        android:text="@string/mobile_txtv_txt"
        android:textSize="@dimen/extra_small_txt"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtx_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtv_mobile"
        android:background="@drawable/edtx_bg"
        android:padding="@dimen/edtx_padding"
        android:layout_marginStart="@dimen/edtx_margin"
        android:layout_marginEnd="@dimen/edtx_margin"

        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edtx_mobile"
        android:layout_marginStart="@dimen/edtx_margin"
        android:layout_marginEnd="@dimen/edtx_margin"
        android:textColor="@color/grey_txt"
        android:text="@string/email_id"
        android:paddingTop="@dimen/txtv_pass_padding"
        android:paddingBottom="@dimen/edtx_txtv_margin"
        android:textSize="@dimen/extra_small_txt"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtx_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtv_email"
        android:background="@drawable/edtx_bg"
        android:padding="@dimen/edtx_padding"
        android:layout_marginStart="@dimen/edtx_margin"
        android:layout_marginEnd="@dimen/edtx_margin"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edtx_email"
        android:layout_marginStart="@dimen/edtx_margin"
        android:layout_marginEnd="@dimen/edtx_margin"
        android:textColor="@color/grey_txt"
        android:paddingTop="@dimen/txtv_pass_padding"
        android:paddingBottom="@dimen/edtx_txtv_margin"
        android:text="@string/password_txtv_txt"
        android:textSize="@dimen/extra_small_txt"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtx_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtv_password"
        android:background="@drawable/edtx_bg"
        android:padding="@dimen/edtx_padding"
        android:layout_marginStart="@dimen/edtx_margin"
        android:layout_marginEnd="@dimen/edtx_margin"

        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/lgn_bg"
        app:layout_constraintTop_toBottomOf="@id/edtx_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/button_margin"
        android:text="@string/login_btn_txt"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/login_clickable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="@dimen/edtx_margin"
        android:layout_marginEnd="@dimen/edtx_margin"
        android:paddingTop="@dimen/edtx_txtv_margin"
        android:text="@string/login_acnt_txt"
        android:fontFamily="sans-serif-black"
        android:textSize="@dimen/clickable_txt_size"
        android:textColor="@color/clickable_txt"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        />
</androidx.constraintlayout.widget.ConstraintLayout>