<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.loginitems.RegistrationActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtv_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/edtx_margin"
        android:layout_marginTop="@dimen/button_margin"
        android:layout_marginEnd="@dimen/edtx_margin"
        android:paddingBottom="@dimen/edtx_txtv_margin"
        android:text="@string/fullname_txt"
        android:textColor="@color/grey_txt"
        android:textSize="@dimen/extra_small_txt"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtx_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/edtx_margin"
        android:layout_marginEnd="@dimen/edtx_margin"
        android:background="@drawable/edtx_bg"
        android:padding="@dimen/edtx_padding"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/txtv_fullname" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtv_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/edtx_margin"
        android:layout_marginEnd="@dimen/edtx_margin"
        android:paddingTop="@dimen/txtv_pass_padding"
        android:paddingBottom="@dimen/edtx_txtv_margin"
        android:text="@string/mobile_txtv_txt"
        android:textColor="@color/grey_txt"
        android:textSize="@dimen/extra_small_txt"
        app:layout_constraintTop_toBottomOf="@id/edtx_fullname" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtx_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/edtx_margin"
        android:layout_marginEnd="@dimen/edtx_margin"
        android:background="@drawable/edtx_bg"
        android:padding="@dimen/edtx_padding"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/txtv_mobile"

        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/edtx_margin"
        android:layout_marginEnd="@dimen/edtx_margin"
        android:paddingTop="@dimen/txtv_pass_padding"
        android:paddingBottom="@dimen/edtx_txtv_margin"
        android:text="@string/email_id"
        android:textColor="@color/grey_txt"
        android:textSize="@dimen/extra_small_txt"
        app:layout_constraintTop_toBottomOf="@id/edtx_mobile" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtx_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/edtx_margin"
        android:layout_marginEnd="@dimen/edtx_margin"
        android:background="@drawable/edtx_bg"
        android:padding="@dimen/edtx_padding"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/txtv_email" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/edtx_margin"
        android:layout_marginEnd="@dimen/edtx_margin"
        android:paddingTop="@dimen/txtv_pass_padding"
        android:paddingBottom="@dimen/edtx_txtv_margin"
        android:text="@string/password_txtv_txt"
        android:textColor="@color/grey_txt"
        android:textSize="@dimen/extra_small_txt"
        app:layout_constraintTop_toBottomOf="@id/edtx_email" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtx_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/edtx_margin"
        android:layout_marginEnd="@dimen/edtx_margin"
        android:background="@drawable/edtx_bg"
        android:padding="@dimen/edtx_padding"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/txtv_password"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin"
        android:background="@drawable/lgn_bg"
        android:text="@string/register_btn_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtx_password" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/login_clickable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/edtx_margin"
        android:layout_marginEnd="@dimen/edtx_margin"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:paddingTop="@dimen/edtx_txtv_margin"
        android:text="@string/login_acnt_txt"
        android:textColor="@color/clickable_txt"
        android:textSize="@dimen/clickable_txt_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>